hard-gists/3917103/run.log
=== Docker Run Log for 3917103 ===
Started at: Mi 29. Okt 14:05:32 CET 2025

[2025-10-29 14:05:33] START: Running container for 3917103
[2025-10-29 14:05:33] SUCCESS: Container f69bdc65814e0c9f57c90306f564f561d8e184c2856472ffe91d06cccc1f713e started for 3917103
=== Container logs for 3917103 ===
  File "/snippet.py", line 6
    print "Loging..."
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3917103 ===
[2025-10-29 14:05:35] INFO: Container f69bdc65814e0c9f57c90306f564f561d8e184c2856472ffe91d06cccc1f713e has stopped
